# CMake-Lib-App-Test-Template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: fancy_function.h
lib/src/: fancy_function.cpp
test/: CMakeLists.txt
test/src/: test_fancy_function.cpp
